add del operation history
